<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp10"
            tools:context=".fragments.FragmentDashboard">

            <LinearLayout
                android:id="@+id/linLatest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/latest_books"
                        android:textColor="@color/white"
                        android:textSize="@dimen/t16sp"
                        android:layout_centerInParent="true"
                        android:layout_alignParentLeft="true"
                        android:textStyle="bold"
                        app:fontFamily="@font/roboto_regular" />

                    <TextView
                        android:id="@+id/tv_all_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/rounded_corner_selected"
                       android:padding="@dimen/dp8"
                        android:text="@string/all_categories"
                        android:textColor="@color/white"
                        android:textSize="@dimen/t14sp"
                        app:fontFamily="@font/roboto_regular" />
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_latest_books"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp10" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linListern"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp15"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/listenrs_choice"
                    android:textColor="@color/white"
                    android:textSize="@dimen/t16sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/roboto_regular" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_listeners_choice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp5" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linMiddle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp15"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/you_are_in_middle_of_something"
                    android:textColor="@color/white"
                    android:textSize="@dimen/t16sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/roboto_regular" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_middle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linMore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp15"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more_rated_books"
                    android:textColor="@color/white"
                    android:textSize="@dimen/t16sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/roboto_regular" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_more_books"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp5" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>