<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.ActivityLogin">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dp30">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp10"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="27sp"
                android:textStyle="bold"
                app:fontFamily="@font/roboto_regular" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/dp10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.15"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/dp20"
                        android:layout_height="@dimen/dp20"
                        android:src="@drawable/ic_phone" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:background="@color/border"
                    android:padding="@dimen/dp1" />

                <TextView
                    android:id="@+id/txtLoginWithNum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:paddingLeft="@dimen/dp20"
                    android:text="@string/login_with_number"
                    android:textColor="@color/black"

                    android:textSize="@dimen/t18sp"
                    app:fontFamily="@font/roboto_regular" />
            </LinearLayout>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/linFacebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/dp10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.15"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/dp20"
                        android:layout_height="@dimen/dp20"
                        android:src="@drawable/ic_fb" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:background="@color/border"
                    android:padding="@dimen/dp1" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:paddingLeft="@dimen/dp20"
                    android:text="@string/login_with_facbook"

                    android:textColor="@color/black"
                    android:textSize="@dimen/t18sp"
                    app:fontFamily="@font/roboto_regular" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/dp15"
                android:background="#c0c0c0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp20"
                android:text="@string/not_registered_yet_register_to_listen_books_with_greate_content"
                android:textColor="@color/black"
                app:fontFamily="@font/roboto_regular" />
        </LinearLayout>
    </LinearLayout>
</layout>